--- a/source/stylesheets/config/_bootstrap_variables.css.scss
+++ b/source/stylesheets/config/_bootstrap_variables.css.scss
@@ -4,15 +4,16 @@
  * ------------------------------------- */
 
 // General style
-$font-family-sans-serif:  $open-sans;
-$body-bg:                 lighten(#000, 93.5%);
+$font-family-sans-serif:  $base-font;
+$body-bg:                 #F0F0F0;
 $font-size-base:          $base-size;
 $line-height-base:        $base-height;
+$headings-font-family:    $header-font;
 
 // Semantic color scheme
 $brand-primary:   $blue;
 $brand-success:   $green;
-$brand-info:      $yellow;
+$brand-info:      $purple;
 $brand-danger:    $red;
 $brand-warning:   $orange;
 
