--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,123 @@
 ---
-title: Welcome to Middleman
+title: Page d'accueil Expateo
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+
+<div id="banner">
+  <div class="video-container">
+    <video autoplay="autoplay" muted="muted" preload="auto" style="width: 1435px; height: 807.1875px; margin-top: -162.09375px; margin-left: 0px;">
+        <source src="videos/background.mp4" type="video/mp4">
+        <source src="videos/background.webm" type="video/webm">
+    </video>
+  </div>
+  <div class="catcher-container">
+    <h1>EXPATEO</h1>
+    <p>Pour un départ tranquille</p>
+    <p>Simplifiez les démarches de vos expatriés</p>
+    <a href="#" class="btn btn-warning">Essayez-nous</a>
+  </div>
+</div>
+
+<div class="bg-black text-center padded" id="infos">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <h2><span>Lister vos démarches</span></h2>
+        <p>Accompagnement pas à pas</p>
+        <%= image_tag "dossier.svg" %>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <h2><span>Résilier vos contrats</span></h2>
+        <p>Générateur et envoi de courriers recommandés</p>
+        <%= image_tag "redactioncourrier.png" %>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <h2><span>Suivre vos résiliations</span></h2>
+        <p>Alertes, Rappels et calendrier</p>
+        <%= image_tag "tache.png" %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="text-center padded container" id="contact">
+  <h2>En savoir plus sur EXPATEO</h2>
+  <p>Laissez-nous vos coordonnées et nous vous re-contacterons</p>
+  <form>
+    <div class="row">
+      <div class="col-xs-12 col-sm-3">
+          <div class="form-group">
+            <label for="exampleInputName2">Nom</label>
+            <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+          </div>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <div class="form-group">
+          <label for="exampleInputEmail2">Email</label>
+          <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <div class="form-group">
+          <label for="exampleInputtel2">Téléphone</label>
+          <input type="text" class="form-control" id="exampleInputName2" placeholder="06 12 34 56 78">
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <div class="form-group">
+          <label for="exampleInputtel2">Entreprise</label>
+          <input type="text" class="form-control" id="societe" placeholder="Societe">
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn-medium">Envoi</button>
+  </form>
+</div>
+
+
+
+  <!-- <form class="form-inline">
+    <div class="form-group">
+      <label for="exampleInputName2">Nom</label>
+      <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail2">Email</label>
+      <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputtel2">Téléphone</label>
+      <input type="text" class="form-control" id="exampleInputName2" placeholder="06 12 34 56 78">
+    </div>
+    <button type="submit" class="btn btn-warning">Envoi</button>
+  </form> -->
+
+
+<div id="map" style="width: 100%; height: 400px;"></div>
+
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+  <script type="text/javascript">
+  var myLatlng = new google.maps.LatLng(48.852937,2.364178);
+
+  var myOptions = {
+    zoom: 16,
+    center: myLatlng,
+    scrollwheel: false,
+    mapTypeId: google.maps.MapTypeId.ROADMAP,
+    styles: [{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f2f2f2"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#46bcec"},{"visibility":"on"}]}]
+  };
+
+  var map = new google.maps.Map(document.getElementById('map'), myOptions);
+  var marker = new google.maps.Marker({
+    position: myLatlng,
+    map: map,
+    title:"You are here!"
+  });
+  </script>
+
+
+<script>
+
+
+</script>
