--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,18 +2,76 @@
 <html>
   <head>
     <meta charset="utf-8">
-    
+
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    
+
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "The Middleman" %></title>
-    
+
     <%= stylesheet_link_tag "normalize", "all" %>
     <%= javascript_include_tag  "all" %>
   </head>
-  
+
   <body class="<%= page_classes %>">
+
+    <nav class="navbar navbar-default navbar-fixed-top navbar-wagon" role="navigation">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <% link_to "index.html", class: "navbar-brand" do %>
+            <% image_tag "logo.png" %>
+          <% end %>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <% link_to "index.html#contact" do %>
+                <i class="fa fa-envelope-o"></i> Contact
+              <% end %>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                <!-- <img src="http://placehold.it/30x30" class="img-avatar" alt=""> -->
+                Informations <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" role="menu">
+                <li>
+                  <%= link_to "L'équipe", "equipe.html" %>
+                </li>
+                <li>
+                  <%= link_to "Les fonctionnalités", "functions.html" %>
+                </li>
+                <li>
+                  <%= link_to "Actualités", "actualites.html" %>
+                </li>
+                <li>
+                  <%= link_to "Mentions Légales", "mentions.html" %>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
     <%= yield %>
+
+    <div id="footer">
+      <ul class="list-inline">
+        <li><%= link_to "Mentions légales", "mentions.html" %></li>
+        <li><%= link_to "Confidentialité", "#" %></li>
+        <li><%= link_to "Partenaires", "#" %></li>
+      </ul>
+    </div>
+
   </body>
 </html>
