--- a/source/stylesheets/layout/_footer.css.scss
+++ b/source/stylesheets/layout/_footer.css.scss
@@ -1,20 +1,25 @@
+
 #footer {
-  background: $gray-darker;
-  padding: 30px 0;
-  color: $gray-lighter;
-  p {
-    margin-top: 17px;
-  }
-  ul {
-    margin-top: 10px;
-  }
+  background-color: #f4f4f4;
+  border-top: solid 1px $gray-lighter;
+  text-align: center;
+  height: 100px;
+  padding-top: 40px;
+  font-size: 15px;
+  opacity: 1px;
+
   a {
-    color: $gray-lighter;
-    font-size: 30px;
-    letter-spacing: 20px;
-    transition: color 0.5s ease;
-    &:hover{
-      color: $yellow;
-    }
+    text-decoration: none;
+    transition:letter-spacing 0,2s ease;
+    color: $gray;
+    font-weight:300;
+  }
+  a:hover {
+      color: $purple;
+      letter-spacing: 1px;
+  }
+
+  li {
+    width: 300px;
   }
 }
