--- a/source/stylesheets/layout/_utilities.css.scss
+++ b/source/stylesheets/layout/_utilities.css.scss
@@ -2,6 +2,11 @@
  * Utilities classes
  * ------------------------------------- */
 .padded {
-  padding-top: 10em;
-  padding-bottom: 10em;
+  padding-top: 8em;
+  padding-bottom: 8em;
 }
+
+.bg-black {
+  background-color: $black;
+  color: white;
+};
