--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,22 +3,26 @@ title: Page d'accueil Expateo
 ---
 
 
-<div id="banner">
-  <div class="video-container">
+<div id="banner" class="smooth-scrollable">
+  <div id="video-container">
     <video autoplay="autoplay" muted="muted" preload="auto" style="width: 1435px; height: 807.1875px; margin-top: -162.09375px; margin-left: 0px;">
         <source src="videos/background.mp4" type="video/mp4">
         <source src="videos/background.webm" type="video/webm">
     </video>
   </div>
-  <div class="catcher-container">
+  <div id="catcher-container">
     <h1>EXPATEO</h1>
     <p>Pour un départ tranquille</p>
     <p>Simplifiez les démarches de vos expatriés</p>
-    <a href="#" class="btn btn-warning">Essayez-nous</a>
+    <br>
+    <a href="#" class="btn-expat">
+      <i class="fa fa-video-camera"></i> Comment ça marche?
+    </a>
   </div>
+  <a href="#infos"><i class="fa fa-angle-down pulse scroll-btn"></i></a>
 </div>
 
-<div class="bg-black text-center padded" id="infos">
+<div class="bg-black text-center padded smooth-scrollable" id="infos">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-4">
@@ -38,9 +42,10 @@ title: Page d'accueil Expateo
       </div>
     </div>
   </div>
+  <a href="#contact"><i class="fa fa-angle-down pulse"></i></a>
 </div>
 
-<div class="text-center padded container" id="contact">
+<div class="text-center padded container smooth-scrollable" id="contact">
   <h2>En savoir plus sur EXPATEO</h2>
   <p>Laissez-nous vos coordonnées et nous vous re-contacterons</p>
   <form>
@@ -75,24 +80,6 @@ title: Page d'accueil Expateo
 </div>
 
 
-
-  <!-- <form class="form-inline">
-    <div class="form-group">
-      <label for="exampleInputName2">Nom</label>
-      <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail2">Email</label>
-      <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputtel2">Téléphone</label>
-      <input type="text" class="form-control" id="exampleInputName2" placeholder="06 12 34 56 78">
-    </div>
-    <button type="submit" class="btn btn-warning">Envoi</button>
-  </form> -->
-
-
 <div id="map" style="width: 100%; height: 400px;"></div>
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
@@ -118,6 +105,11 @@ title: Page d'accueil Expateo
 
 
 <script>
-
-
+  // var btn = $('.btn-expat')
+  // var textInit = btn.text()
+  // btn.hover(function(){
+  //   $(this).text("C'est parti !!");
+  // }, function(){
+  //   $(this).text(textInit)
+  // })
 </script>
