--- a/source/stylesheets/layout/_navbar_scrolled.css.scss
+++ b/source/stylesheets/layout/_navbar_scrolled.css.scss
@@ -1,10 +1,10 @@
 /* -------------------------------------
  * Colors & Fonts
  * ------------------------------------- */
-$navbar-color: white;
+$navbar-color: black;
 $navbar-hover-color: $orange;
 $navbar-font-family: $header-font;
-$navbar-bg: transparent;
+$navbar-bg: white;
 
 /* -------------------------------------
  * Box model
@@ -38,7 +38,7 @@ $navbar-profile-border-width: 2px;
 .navbar-transparent-white {
   background: rgba(255,255,255,0.8);
 }
-.navbar-wagon{
+.navbar-scrolled{
   background: $navbar-bg;
   font-family: $navbar-font-family;
   border: none;
@@ -138,15 +138,14 @@ $navbar-profile-border-width: 2px;
  * ------------------------------------- */
 
 
-
 @media screen and (max-width: 768px) {
-  .navbar-wagon{
+  .navbar-scrolled{
     .navbar-brand img, .navbar-brand svg{
       height: 50px;
     }
   }
-  .navbar-wagon .navbar-brand,
-  .navbar-wagon .navbar-brand:hover
+  .navbar-scrolled .navbar-brand,
+  .navbar-scrolled .navbar-brand:hover
    {
     display: block;
     color: $navbar-color;
