--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -1,11 +1,12 @@
 #banner {
   // background: image-url("background.png");
-  background: black;
+  background: $black;
   color: white;
   height: 600px;
   padding-top: 100px;
   padding-left: 50px;
   overflow: hidden;
+  position:relative;
   h1{
     font-size: 70px;
     text-shadow: 1px 1px 2px #727272;
@@ -14,21 +15,20 @@
     font-size: 25px;
     font-weight: 300;
   }
+  .scroll-btn {
+    color: white;
+    font-size: 50px;
+    position: absolute;
+    bottom: 20px;
+    width: 100px;
+    text-align: center;
+    left: 50%;
+    margin-left: -50px;
+  }
 }
 
-// #infos{
-//   h2{
-//     font-size: 30px;
-//     font-family: $Proxima;
-//     font-weight: regular;
-//   }
-//   h2 span {
-//     border-bottom: solid 2px $orange;
-//   }
-// }
-
-.video-container {
-  opacity: 0.4;
+#video-container {
+  opacity: 0.6;
   height: 600px;
   left: 0;
   position: absolute;
@@ -41,10 +41,26 @@
   }
 }
 
-.catcher-container {
+#catcher-container {
   position: relative;
   z-index: 1;
-  a {
-    margin-top: 25px;
-  }
+  // a {
+  //   margin-top: 45px;
+  // }
 }
+
+#infos {
+  position: relative;
+}
+
+#infos a {
+  color: white;
+  font-size: 50px;
+  position: absolute;
+  bottom: 20px;
+  width: 100px;
+  left: 50%;
+  margin-left: -50px;
+}
+
+
