--- a/source/equipe.html.erb
+++ b/source/equipe.html.erb
@@ -8,15 +8,32 @@ title: L'équipe EXPATEO
   <ul class="list-inline text-center" id="team">
    <li>
      <%= image_tag "claire.jpg", class: "img-rounded" %>
-     <p>Mélik BOUDEMAGH</p>
+     <h2>Mélik BOUDEMAGH</h2>
+     <p>Après un passage de deux ans sur les marchés financiers à NYC et Londres, Melik s’est spécialisé dans la gestion de la mobilité internationale, en créant notamment une agence de relocation. Il accompagne et conseille ainsi les plus grands groupes français dans toutes leurs démarches de gestion d’expatriés depuis 2005. Il parle quatre langues et a vécu et travaillé dans 8 pays différents
+     </p>
    </li>
    <li>
      <%= image_tag "claire.jpg", class: "img-rounded" %>
-     <p>Claire PINATEL</p>
+     <h2>Claire PINATEL</h2>
+     <p>Claire, diplomée d'Audencia a complété sa formation à l'ESSEC, a 13 ans d’experience dans le secteur bancaire et dans le conseil en stratégie. Elle connait bien les besoins des expatriés ayant été elle-même expatriée dans 4 pays et partage aujourd'hui sa vie entre Paris et Istanbul.
+      </p>
+     <p></p>
    </li>
    <li>
      <%= image_tag "patrice.jpg", class: "img-rounded" %>
-     <p>Patrice BERQUET</p>
+     <h2>Patrice BERQUET</h2>
+     <p>Patrice a presque 25 ans d’expérience en tant que chef de projet  ou développeur d’applications / logiciels en entreprises. Depuis 15 ans pour le groupe SQLI (qui accompagne les entreprises dans leur transformation digitale), il a géré des projets et développé nombre de logiciels, extranet ou sites internet pour le compte de grandes entreprises. A ce titre, il maitrise l’essentiel des langages de programmation informatique. Il dispose déjà d’une expérience dans le secteur de la mobilité internationale en collaboration avec Melik Boudemagh. Il est en effet associé dans Global Transitions et a lui-même développé leur logiciel de gestion Globe Access. Il s’agit d’un logiciel de gestion d’immigration et relocation qui sert notamment d’interface avec les responsables RH pour la saisie et le suivi des missions de relocation, mais également de plateforme entre les consultants et les expatriés pour leurs démarches notamment celles d’immigration. Patrice réalise donc le développement de l’application d’EXPATEO. Dans ce cadre, il restera salarié jusqu’à ce qu’EXPATEO soit en mesure de l’intégrer en tant que salarié</p>
    </li>
   </ul>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4">
+    </div>
+    <div class="col-xs-12 col-sm-4">
+    </div>
+    <div class="col-xs-12 col-sm-4">
+    </div>
+  </div>
 </div>
