--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -45,7 +45,7 @@ $base-height: 1.4;
  * ------------------------------------- */
 // Scheme
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: #2C3E50;
 $yellow: #FDB631;
 $orange: #ED5A25;
 $green: #32B796;
