--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,7 +12,7 @@ title: Page d'accueil Expateo
   </div>
   <div id="catcher-container">
     <h1>EXPATEO</h1>
-    <p>Pour un départ tranquille</p>
+    <p>Pour un départ serein</p>
     <p>Simplifiez les démarches de vos expatriés</p>
     <br>
     <a href="#" class="btn-expat">
@@ -26,19 +26,28 @@ title: Page d'accueil Expateo
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-4">
-        <h2><span>Lister vos démarches</span></h2>
-        <p>Accompagnement pas à pas</p>
-        <%= image_tag "dossier.svg" %>
+        <%= image_tag "dossier.png" %>
+        <h2><span>Saisir ses informations</span></h2>
+        <ul>
+          <li >Saisie intuitive et optimisée des informations pour chaque type de contrat</li>
+          <li>Accompagnement pas à pas à chaque étape de la procédure</li>
+        </ul>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <h2><span>Résilier vos contrats</span></h2>
-        <p>Générateur et envoi de courriers recommandés</p>
-        <%= image_tag "redactioncourrier.png" %>
+        <%= image_tag "courrier.png" %>
+        <h2><span>Résilier ses contrats</span></h2>
+        <ul>
+          <li>Procédures spécifiques au mode de résiliation et au fournisseur</li>
+          <li>Génération et envoi automatiques des recommandés et rappel des échéances</li>
+        </ul>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <h2><span>Suivre vos résiliations</span></h2>
-        <p>Alertes, Rappels et calendrier</p>
         <%= image_tag "tache.png" %>
+        <h2><span>Suivre ses résiliations</span></h2>
+        <ul>
+          <li>Accès à un ensemble d’outils de gestion (tableau de bord, alertes, etc.)</li>
+          <li>Archivage automatisé des courriers et des preuves de dépôt</li>
+        </ul>
       </div>
     </div>
   </div>
