--- a/source/stylesheets/components/_card.css.scss
+++ b/source/stylesheets/components/_card.css.scss
@@ -3,4 +3,7 @@
   box-shadow: 1px 1px 2px $gray-light;
   color:$black;
   border-radius:2px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  margin: 5px;
 }
